<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lorem Picsum</string>

    <!-- welcome_fragment start-->
    <string name="welcome_button_login">Log In</string>
    <string name="welcome_button_register">Register</string>
    <!-- welcome_fragment end-->

    <!-- signup_fragment start-->
    <string name="signup_title">@string/welcome_button_register</string>
    <string name="signup_hint_email">Email Address</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_username">Username</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_tnc_label">By signing up, you agree to Photo\’s Terms of Service and Privacy Policy.</string>
    <!-- signup_fragment end-->

    <!-- login_fragment start-->
    <string name="login_title">@string/welcome_button_login</string>
    <string name="login_hint_email">@string/signup_hint_email</string>
    <string name="login_hint_password">@string/signup_hint_password</string>
    <string name="login_button_label">@string/welcome_button_login</string>
    <!-- login_fragment end-->

    <!-- discover start-->
    <string name="discover_title">Discover</string>
    <string name="discover_whats_new_label">What’s new today</string>
    <string name="discover_browse_all_label">Browse all</string>
    <!-- discover end-->

    <!-- profile start-->
    <string name="profile_follow_button_label">Follow %s</string>
    <string name="profile_message_button_label">Message</string>
    <!-- profile end-->

    <!-- search start-->
    <string name="search_title">Search</string>
    <string name="search_hint">Search all photos</string>
    <string name="search_all_result_label">All Results</string>
    <string name="search_see_more_button">See More</string>
    <!-- search end-->

    <string name="content_description_close_button">Close</string>
    <string name="label_bottom_nav_home">Discover</string>
    <string name="label_bottom_nav_search">Search</string>
    <string name="label_bottom_nav_chats">Chats</string>
    <string name="label_bottom_nav_profile">Profile</string>
</resources>
